cppParser.py
# Generated from cpp.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cppParser ( Parser ):

    grammarFileName = "cpp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'include'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<<'", "'>>'", 
                     "'=='", "'+='", "'-='", "'!='", "'<='", "'>='", "'!'", 
                     "'&&'", "'||'", "'?'", "';'", "','", "'.'", "'->'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'++'", "'--'", 
                     "'|'", "'^'", "'~'", "'::'", "'&'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'<'", "'>'", "':'", "'if'", "'else'", 
                     "'while'", "'for'", "'return'", "'size_t'", "'stringstream'", 
                     "'int'", "'string'", "'bool'", "'double'", "'float'", 
                     "'void'", "'char'", "'vector'", "'stack'", "'const'", 
                     "'std'", "'using'", "'namespace'", "'getline'", "'cin'", 
                     "'cout'", "'endl'" ]

    symbolicNames = [ "<INVALID>", "HASH", "INCLUDE", "StringLiteral", "IncludeFileName", 
                      "BACK_FUNCTION", "FRONT_FUNCTION", "BooleanLiteral", 
                      "LEFT_SHIFT", "RIGHT_SHIFT", "EQUAL", "PLUS_EQUAL", 
                      "MINUS_EQUAL", "NOT_EQUAL", "LESS_EQUAL", "GREATER_EQUAL", 
                      "NOT", "AND_OP", "OR_OP", "QUESTION", "SEMICOLON", 
                      "COMMA", "DOT", "ARROW", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "INCREMENT", "DECREMENT", 
                      "BITWISE_OR", "BITWISE_XOR", "BITWISE_NOT", "DOUBLE_COLON", 
                      "AMPERSAND", "PLUS", "MINUS", "STAR", "DIV", "MOD", 
                      "ASSIGN", "LESS", "GREATER", "COLON", "IF", "ELSE", 
                      "WHILE", "FOR", "RETURN", "SIZE_T", "STRING_STREAM", 
                      "INT", "STRING", "BOOL", "DOUBLE", "FLOAT", "VOID", 
                      "CHAR", "VECTOR", "STACK", "CONST", "STD", "USING", 
                      "NAMESPACE", "GET", "CIN", "COUT", "ENDL", "NUMBER", 
                      "ID", "WS", "COMMENT", "MULTILINE_COMMENT", "NEWLINE" ]

    RULE_program = 0
    RULE_includeDirective = 1
    RULE_usingNamespaceDeclaration = 2
    RULE_functionDefinition = 3
    RULE_parameterList = 4
    RULE_parameter = 5
    RULE_parameterTypeSpecifier = 6
    RULE_typeSpecifier = 7
    RULE_baseTypeSpecifier = 8
    RULE_containerTypeSpecifier = 9
    RULE_qualifiedIdentifier = 10
    RULE_templateType = 11
    RULE_compoundStatement = 12
    RULE_statement = 13
    RULE_declarationStatement = 14
    RULE_variableDeclaration = 15
    RULE_initDeclaratorList = 16
    RULE_initDeclarator = 17
    RULE_arraySubscript = 18
    RULE_initializer = 19
    RULE_expressionStatement = 20
    RULE_expStatement = 21
    RULE_selectionStatement = 22
    RULE_iterationStatement = 23
    RULE_jumpStatement = 24
    RULE_assignmentExpression = 25
    RULE_logicalExpression = 26
    RULE_logicalOrExpr = 27
    RULE_logicalAndExpr = 28
    RULE_equalityExpr = 29
    RULE_relationalExpr = 30
    RULE_operationExpression = 31
    RULE_additionExpr = 32
    RULE_multiplicationExpr = 33
    RULE_unaryExpr = 34
    RULE_postfixExpr = 35
    RULE_primaryExpr = 36
    RULE_backFunctionName = 37
    RULE_frontFunctionName = 38
    RULE_turnExpression = 39
    RULE_argList = 40
    RULE_conditionalExpression = 41
    RULE_inputStream = 42
    RULE_inputStreamTarget = 43
    RULE_outputStream = 44
    RULE_outputStreamTarget = 45
    RULE_outExpression = 46

    ruleNames =  [ "program", "includeDirective", "usingNamespaceDeclaration", 
                   "functionDefinition", "parameterList", "parameter", "parameterTypeSpecifier", 
                   "typeSpecifier", "baseTypeSpecifier", "containerTypeSpecifier", 
                   "qualifiedIdentifier", "templateType", "compoundStatement", 
                   "statement", "declarationStatement", "variableDeclaration", 
                   "initDeclaratorList", "initDeclarator", "arraySubscript", 
                   "initializer", "expressionStatement", "expStatement", 
                   "selectionStatement", "iterationStatement", "jumpStatement", 
                   "assignmentExpression", "logicalExpression", "logicalOrExpr", 
                   "logicalAndExpr", "equalityExpr", "relationalExpr", "operationExpression", 
                   "additionExpr", "multiplicationExpr", "unaryExpr", "postfixExpr", 
                   "primaryExpr", "backFunctionName", "frontFunctionName", 
                   "turnExpression", "argList", "conditionalExpression", 
                   "inputStream", "inputStreamTarget", "outputStream", "outputStreamTarget", 
                   "outExpression" ]

    EOF = Token.EOF
    HASH=1
    INCLUDE=2
    StringLiteral=3
    IncludeFileName=4
    BACK_FUNCTION=5
    FRONT_FUNCTION=6
    BooleanLiteral=7
    LEFT_SHIFT=8
    RIGHT_SHIFT=9
    EQUAL=10
    PLUS_EQUAL=11
    MINUS_EQUAL=12
    NOT_EQUAL=13
    LESS_EQUAL=14
    GREATER_EQUAL=15
    NOT=16
    AND_OP=17
    OR_OP=18
    QUESTION=19
    SEMICOLON=20
    COMMA=21
    DOT=22
    ARROW=23
    LPAREN=24
    RPAREN=25
    LBRACE=26
    RBRACE=27
    LBRACK=28
    RBRACK=29
    INCREMENT=30
    DECREMENT=31
    BITWISE_OR=32
    BITWISE_XOR=33
    BITWISE_NOT=34
    DOUBLE_COLON=35
    AMPERSAND=36
    PLUS=37
    MINUS=38
    STAR=39
    DIV=40
    MOD=41
    ASSIGN=42
    LESS=43
    GREATER=44
    COLON=45
    IF=46
    ELSE=47
    WHILE=48
    FOR=49
    RETURN=50
    SIZE_T=51
    STRING_STREAM=52
    INT=53
    STRING=54
    BOOL=55
    DOUBLE=56
    FLOAT=57
    VOID=58
    CHAR=59
    VECTOR=60
    STACK=61
    CONST=62
    STD=63
    USING=64
    NAMESPACE=65
    GET=66
    CIN=67
    COUT=68
    ENDL=69
    NUMBER=70
    ID=71
    WS=72
    COMMENT=73
    MULTILINE_COMMENT=74
    NEWLINE=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cppParser.EOF, 0)

        def includeDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cppParser.IncludeDirectiveContext)
            else:
                return self.getTypedRuleContext(cppParser.IncludeDirectiveContext,i)


        def usingNamespaceDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cppParser.UsingNamespaceDeclarationContext)
            else:
                return self.getTypedRuleContext(cppParser.UsingNamespaceDeclarationContext,i)


        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cppParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(cppParser.FunctionDefinitionContext,i)


        def declarationStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cppParser.DeclarationStatementContext)
            else:
                return self.getTypedRuleContext(cppParser.DeclarationStatementContext,i)


        def expressionStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cppParser.ExpressionStatementContext)
            else:
                return self.getTypedRuleContext(cppParser.ExpressionStatementContext,i)


        def getRuleIndex(self):
            return cppParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = cppParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9221120240280207562) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 197) != 0):
                self.state = 99
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.includeDirective()
                    pass

                elif la_ == 2:
                    self.state = 95
                    self.usingNamespaceDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 96
                    self.functionDefinition()
                    pass

                elif la_ == 4:
                    self.state = 97
                    self.declarationStatement()
                    pass

                elif la_ == 5:
                    self.state = 98
                    self.expressionStatement()
                    pass


                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(cppParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(cppParser.HASH, 0)

        def INCLUDE(self):
            return self.getToken(cppParser.INCLUDE, 0)

        def IncludeFileName(self):
            return self.getToken(cppParser.IncludeFileName, 0)

        def StringLiteral(self):
            return self.getToken(cppParser.StringLiteral, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(cppParser.NEWLINE)
            else:
                return self.getToken(cppParser.NEWLINE, i)

        def getRuleIndex(self):
            return cppParser.RULE_includeDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeDirective" ):
                listener.enterIncludeDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeDirective" ):
                listener.exitIncludeDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeDirective" ):
                return visitor.visitIncludeDirective(self)
            else:
                return visitor.visitChildren(self)




    def includeDirective(self):

        localctx = cppParser.IncludeDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_includeDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(cppParser.HASH)
            self.state = 107
            self.match(cppParser.INCLUDE)
            self.state = 108
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==75:
                self.state = 109
                self.match(cppParser.NEWLINE)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingNamespaceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(cppParser.USING, 0)

        def NAMESPACE(self):
            return self.getToken(cppParser.NAMESPACE, 0)

        def STD(self):
            return self.getToken(cppParser.STD, 0)

        def SEMICOLON(self):
            return self.getToken(cppParser.SEMICOLON, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(cppParser.NEWLINE)
            else:
                return self.getToken(cppParser.NEWLINE, i)

        def getRuleIndex(self):
            return cppParser.RULE_usingNamespaceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingNamespaceDeclaration" ):
                listener.enterUsingNamespaceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingNamespaceDeclaration" ):
                listener.exitUsingNamespaceDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingNamespaceDeclaration" ):
                return visitor.visitUsingNamespaceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def usingNamespaceDeclaration(self):

        localctx = cppParser.UsingNamespaceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_usingNamespaceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(cppParser.USING)
            self.state = 116
            self.match(cppParser.NAMESPACE)
            self.state = 117
            self.match(cppParser.STD)
            self.state = 118
            self.match(cppParser.SEMICOLON)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==75:
                self.state = 119
                self.match(cppParser.NEWLINE)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(cppParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(cppParser.ID, 0)

        def LPAREN(self):
            return self.getToken(cppParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cppParser.RPAREN, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(cppParser.CompoundStatementContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(cppParser.ParameterListContext,0)


        def getRuleIndex(self):
            return cppParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = cppParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.typeSpecifier()
            self.state = 126
            self.match(cppParser.ID)
            self.state = 127
            self.match(cppParser.LPAREN)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 9221120237041090560) != 0):
                self.state = 128
                self.parameterList()


            self.state = 131
            self.match(cppParser.RPAREN)
            self.state = 132
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cppParser.ParameterContext)
            else:
                return self.getTypedRuleContext(cppParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(cppParser.COMMA)
            else:
                return self.getToken(cppParser.COMMA, i)

        def getRuleIndex(self):
            return cppParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = cppParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.parameter()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 135
                self.match(cppParser.COMMA)
                self.state = 136
                self.parameter()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterTypeSpecifier(self):
            return self.getTypedRuleContext(cppParser.ParameterTypeSpecifierContext,0)


        def ID(self):
            return self.getToken(cppParser.ID, 0)

        def getRuleIndex(self):
            return cppParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = cppParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.parameterTypeSpecifier()
            self.state = 143
            self.match(cppParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(cppParser.TypeSpecifierContext,0)


        def getRuleIndex(self):
            return cppParser.RULE_parameterTypeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterTypeSpecifier" ):
                listener.enterParameterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterTypeSpecifier" ):
                listener.exitParameterTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterTypeSpecifier" ):
                return visitor.visitParameterTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def parameterTypeSpecifier(self):

        localctx = cppParser.ParameterTypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameterTypeSpecifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.typeSpecifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseTypeSpecifier(self):
            return self.getTypedRuleContext(cppParser.BaseTypeSpecifierContext,0)


        def CONST(self):
            return self.getToken(cppParser.CONST, 0)

        def AMPERSAND(self):
            return self.getToken(cppParser.AMPERSAND, 0)

        def STAR(self):
            return self.getToken(cppParser.STAR, 0)

        def containerTypeSpecifier(self):
            return self.getTypedRuleContext(cppParser.ContainerTypeSpecifierContext,0)


        def getRuleIndex(self):
            return cppParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)
